--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" type="text/css" href="./css/app.css">
   </head>
   <body>
+    <span class="taken b">Black Pieces Taken: 
+      <span class="l">0</span>
+    </span><br>
+    <span class="taken r">Red Pieces Taken: 
+      <span class="l">0</span>
+    </span><br>
     <span class="row row-a">
       <span class="col col-0 empty"></span>
       <span class="col col-1"></span>
@@ -17,6 +23,7 @@
       <span class="col col-6 empty"></span>
       <span class="col col-7"></span>
     </span>
+    <span class="message"></span>
     <br>
     <span class="row row-b">
       <span class="col col-0"></span>
@@ -83,6 +90,7 @@
       <span class="col col-6 empty"></span>
       <span class="col col-7"></span>
     </span>
+    <span class="currentPlayer"></span>
     <br>
     <span class="row row-h">
       <span class="col col-0"></span>
@@ -98,5 +106,9 @@
     <br>
 
     <button class="start">Start the game</button>
+    <span class="turn"></span>
+    <br>
+    <span class="games">Games Played: <span class="counter">0</span></span>
+
   </body>
 </html>
