add game options checkboxes, fix piece counter for kings

--- a/index.html
+++ b/index.html
@@ -105,10 +105,16 @@
     <br>
     <br>
 
-    <button class="start">Start the game</button>
+    <br>
     <span class="turn"></span>
     <br>
     <span class="games">Games Played: <span class="counter">0</span></span>
-
+    <br>
+    <div class="startOptions">
+      <label ><input type="checkbox" class="startOptions" id="mustJump" checked>Must-Jumps</label><br>
+      <label><input type="checkbox" class="startOptions" id="playComputer" checked>Play Computer</label><br>
+      <label><input type="checkbox" class="startOptions" id="tauntOn">Taunts On</label><br>
+    </div>
+    <input type="submit" class="start" value="Start the game">
   </body>
 </html>
